sample/user-validation-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user-validation
  labels:
    k8s-app: user-validation-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        k8s-app: user-validation
    spec:
      containers:
      - name: user-validation
        image: pengyue/ms-user-validation
        ports:
          - containerPort: 80
          - containerPort: 443
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
