sample/user-validation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-validation
  labels:
    k8s-app: user-validation-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    k8s-app: user-validation
