sample/user-validation-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-validation
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: user-validation.home
    http:
      paths:
      - path: /
        backend:
          serviceName: user-validation
          servicePort: 80
